--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@chakra-ui/theme": "^2.2.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fontsource/kaushan-script": "^5.0.12",
     "@fontsource/titillium-web": "^5.0.11",
     "@google/maps": "^1.1.3",
     "@testing-library/jest-dom": "^5.16.5",
