--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "aos": "^2.3.4",
     "axios": "^1.3.4",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-player": "^2.13.0",
